--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-
-    <html lang="en"
+<html>
 <head>
-
-    <meta charset ="UTF-8">
-    <title>Hello World!</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="bluestyle.css">
-    
-    
+<title>Hello World!</title>-
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-
 
 <h1>Hello world!</h1>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space"
