huy thu modify branch skeleton

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <div class="huy">
     <h1>That ra la cai gi ma kho chiuj qua di lam hoai cu nham</h1>
+    <h2 class="cau2">Huy modi fy skeleton</h2>
 </div>
 </body>
 </html>
