Huy modify skeleton lan 3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <div class="huy">
     <h1>That ra la cai gi ma kho chiuj qua di lam hoai cu nham</h1>
     <h2 class="cau2">Huy modi fy skeleton</h2>
+    <h2 class="cau2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi molestiae molestias iste! Fugiat dolorum dicta id suscipit laboriosam quos rem ipsam eius officiis ipsa earum nisi, iusto tempore. Tempore!</h2>
+    <h1 class="cau3">Lorem ipsum dolor sit amet.</h1>
 </div>
 </body>
 </html>
