--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 
 <h1>Hello world!</h1>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space"
-    style="width:100%;max-width:960px"></div>
+    style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <p>A new line in our file!</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
-
+<div class="huy">
+    <h1>That ra la cai gi ma kho chiuj qua di lam hoai cu nham</h1>
+    <h2 class="cau2">Huy modi fy skeleton</h2>
+    <h2 class="cau2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi molestiae molestias iste! Fugiat dolorum dicta id suscipit laboriosam quos rem ipsam eius officiis ipsa earum nisi, iusto tempore. Tempore!</h2>
+    <h1 class="cau3">Lorem ipsum dolor sit amet.</h1>
+</div>
 </body>
 </html>
 
