add bootrap to index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
 <title>Hello World!</title>-
 <link rel="stylesheet" href="bluestyle.css">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
@@ -18,6 +26,18 @@
     <h2 class="cau2">Huy modi fy skeleton</h2>
     <h2 class="cau2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi molestiae molestias iste! Fugiat dolorum dicta id suscipit laboriosam quos rem ipsam eius officiis ipsa earum nisi, iusto tempore. Tempore!</h2>
     <h1 class="cau3">Lorem ipsum dolor sit amet.</h1>
+    form.<ul class="nav justify-content-center">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled link</a>
+        </li>
+    </ul>
+   
 </div>
 </body>
 </html>
