--- a/index.html
+++ b/index.html
@@ -26,17 +26,12 @@
     <h2 class="cau2">Huy modi fy skeleton</h2>
     <h2 class="cau2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sequi molestiae molestias iste! Fugiat dolorum dicta id suscipit laboriosam quos rem ipsam eius officiis ipsa earum nisi, iusto tempore. Tempore!</h2>
     <h1 class="cau3">Lorem ipsum dolor sit amet.</h1>
-    form.<ul class="nav justify-content-center">
-        <li class="nav-item">
-            <a class="nav-link active" href="#">Active link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled link</a>
-        </li>
-    </ul>
+    
+     <div class="form-group">
+       <label for=""></label>
+       <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+       <small id="helpId" class="text-muted">Help text</small>
+     </div>
    
 </div>
 </body>
