con cac lam kho nhau qua

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
       <small id="helpId" class="text-muted">Help text</small>
     </div>
+    <h1 class="cau3">HOM nNayY LAM THU O HTML-SKELETON-2 SAU DO MERE VOI HTML-SKELETON. SAU DO MERGE HTNL-SKELETON VOI MASTER
+      KHONG BIET TINH HINH CO OK KHONG
+    </h1>
+    <h2 class="cau3">LAM LAI LAN THU 2 MERGER VOI HTML-SKELTON
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo dolor ipsa et reprehenderit aliquid, in tenetur voluptatibus quas dolores suscipit?
+    </h2>
    
 </div>
 
