--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
     </div>
     <h1 class="cau3">HOM nNayY LAM THU O HTML-SKELETON-2 SAU DO MERE VOI HTML-SKELETON. SAU DO MERGE HTNL-SKELETON VOI MASTER
       KHONG BIET TINH HINH CO OK KHONG
+      TEST LAN THU 3 LAI DAY THU XEM Co DUOC NUA KHONG GIT LON XON QUA
     </h1>
-    <h2 class="cau3">LAM LAI LAN THU 2 MERGER VOI HTML-SKELTON
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo dolor ipsa et reprehenderit aliquid, in tenetur voluptatibus quas dolores suscipit?
-    </h2>
    
 </div>
 
